--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     </head>
 
-    <h2>PEDRA PAPEL TESOURA</h2>
+    <h2>ROCK PAPER SCISSORS</h2>
     <div style = "text-align: center;font-size: 35px;"class = "vitoria"></div>
     <hr>
 
