--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+        <title>Rock Paper Scissors Game</title>
     </head>
 
     <h2>ROCK PAPER SCISSORS</h2>
