--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+        <title>Rock Paper Scissors Game</title>
     </head>
 
-    <h2>PEDRA PAPEL TESOURA</h2>
+    <h2>ROCK PAPER SCISSORS</h2>
     <div style = "text-align: center;font-size: 35px;"class = "vitoria"></div>
     <hr>
 
